# tensa

./: .env.example  .gitguardian.yaml  .gitignore  PRODUCT.md  README.md  docker-compose.override.yml  docker-compose.yml  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
client/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: FileUploadZone.tsx  JobCard.tsx  JobList.tsx  LineWaves.tsx  ModeSelector.tsx  OptionsPanel.tsx  PlaylistModal.tsx  QualitySelector.tsx  SplitText.tsx  (+3 more)
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/src/: __init__.py  config.py  main.py  worker.py
server/src/core/: db.py  files.py  job_execution.py  logging.py  metrics.py  rate_limit.py  redis.py  sse.py  url_safety.py
server/src/engines/: ffmpeg.py  whisper.py  ytdlp.py
server/src/features/audio/: constants.py  service.py  task.py
server/src/features/convert/: constants.py  service.py  task.py
server/src/features/download/: constants.py  service.py  task.py
server/src/features/metadata/: router.py  schemas.py  service.py
server/src/features/playlist/: router.py  schemas.py  service.py  task.py
server/src/features/transcribe/: constants.py  service.py  task.py
server/src/jobs/: constants.py  models.py  router.py  schemas.py  service.py  store.py
server/tests/: conftest.py  test_config.py  test_files.py  test_input_path.py  test_job_execution.py  test_jobs_api.py  test_playlist_info.py  test_url_safety.py  test_ytdlp_engine.py
(+21 files in other folders)
