[tool.poetry]
name = "tensa-server"
version = "0.1.0"
description = "Video toolkit backend"
authors = ["Tensa"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = {extras = ["standard"], version = "^0.115"}
uvicorn = {extras = ["standard"], version = "^0.34"}
arq = "^0.26"
redis = {extras = ["hiredis"], version = "^5.2"}
slowapi = "^0.1.9"
pydantic-settings = "^2.7"
aiofiles = "^24.1"
python-multipart = "^0.0.20"
openai-whisper = ">=20250625"
torch = {version = "^2.5", source = "pytorch-cpu"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
aiosqlite = "^0.20"
structlog = "^24.4"
prometheus-client = ">=0.21,<0.26"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.28"
anyio = {extras = ["trio"], version = "^4.7"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
